k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogocash-admin-service
  labels:
    app: gogocash-admin
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: gogocash-admin
