k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gogocash-admin-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "gogocash-admin-ip"
    networking.gke.io/managed-certificates: "gogocash-admin-ssl-cert"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: your-domain.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: gogocash-admin-service
            port:
              number: 80
